# Onion

src/: Cargo.toml  Makefile.toml
src/app-host/: index.js  package-lock.json  package.json
src/interpreter/: Cargo.toml
src/interpreter/src/: evaluator.rs  main.rs  tests.rs
src/libonion/: Cargo.toml
src/libonion/src/: lib.rs  syntax.md
src/libonion/src/lexer/: mod.rs  tests.rs  token.rs
src/libonion/src/lexer/snapshots/: libonion__lexer__tests__tests__array.snap  libonion__lexer__tests__tests__array.snap.new  libonion__lexer__tests__tests__bool.snap  libonion__lexer__tests__tests__bool.snap.new  libonion__lexer__tests__tests__comments.snap  libonion__lexer__tests__tests__comments.snap.new  libonion__lexer__tests__tests__complex.snap  libonion__lexer__tests__tests__complex.snap.new  libonion__lexer__tests__tests__complex_component.snap  libonion__lexer__tests__tests__complex_component.snap.new  libonion__lexer__tests__tests__component.snap  libonion__lexer__tests__tests__component.snap.new  libonion__lexer__tests__tests__hash.snap  libonion__lexer__tests__tests__hash.snap.new  libonion__lexer__tests__tests__let.snap  libonion__lexer__tests__tests__let.snap.new  libonion__lexer__tests__tests__let_with_space.snap  libonion__lexer__tests__tests__let_with_space.snap.new  libonion__lexer__tests__tests__simple.snap  libonion__lexer__tests__tests__simple.snap.new  libonion__lexer__tests__tests__string.snap  libonion__lexer__tests__tests__string.snap.new
src/libonion/src/math/: numbers.rs
src/libonion/src/object/: builtins.rs  environment.rs  mod.rs  object.rs
src/libonion/src/parser/: ast.rs  declaration.rs  expression.rs  mod.rs  precedences.rs  statement.rs  tests.rs
src/libonion/src/styles/: style.rs
src/wasm/: Cargo.toml  LICENSE_MIT
src/wasm/src/: lib.rs
