[package]
name = "libonion"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "libonion"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
lazy_static = "1.4.0"

[dev-dependencies]
insta = "1.34.0"